[package]
name = "iraft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
futures = "~0.3.15"
futures-util = "~0.3.15"
serde = "~1.0.126"
serde_derive = "~1.0.126"
serde_yaml = "0.8"
log = "~0.4.14"
simplelog = "0.10.0"
anyhow = "1.0.43"
rand = "~0.8.3"
bincode = "1.3.3"